Add MCP key-value store server implementation with basic put/get operations

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,11 @@
 [project]
-name = "kv-file-store"
+name = "kvstore-mcp"
 version = "0.1.0"
-description = "Add your description here"
+description = "MCP server for key-value store operations"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = []
+dependencies = [
+    "mcp[cli]>=1.6.0",
+    "requests>=2.28.0",
+    "python-dotenv>=1.0.0",
+]
